<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <Button
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/query_wifi_list"
        android:id="@+id/queryWifiList"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/query_connect_info"
        android:id="@+id/queryConnectInfo"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/update_ems_data"
        android:id="@+id/updateEMSData"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/update_ems_extend_data"
        android:id="@+id/updateEMSExtendData"
        />
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/wifiListLv"
        />
</LinearLayout>